plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'org.swmaestro.repl'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // database Connector
    runtimeOnly 'com.mysql:mysql-connector-j'

    // lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
    annotationProcessor 'org.projectlombok:lombok'

    // jakarta.validation annotation
    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'

    // spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // jwt
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-orgjson', version: '0.11.2'
    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.30.1'

    // spring auto restart
    implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '3.1.0'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

    // json
    implementation 'com.google.code.gson:gson:2.8.7'

    // encryption algorithm
    implementation group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version: '1.72'

    // web client
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // aws - s3
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'
    testImplementation group: 'io.findify', name: 's3mock_2.12', version: '0.2.6'
    testImplementation group: 'software.amazon.awssdk', name: 's3', version: '2.20.151'

    // sentry
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:6.27.0'

    // firebase
    implementation group: 'com.google.firebase', name: 'firebase-admin', version: '8.1.0'
}

tasks.named('test') {
    useJUnitPlatform()
}